--- a/.github/workflows/tes.yml
+++ b/.github/workflows/tes.yml
@@ -53,6 +53,19 @@ jobs:
       - name: Run a one-line script
         run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_wOgBzcL4a69GWOxI504LDVMR1kAE/j2yIH4nQKi
       - name: Run a one-line script
-        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_GCGS1eW294smuRe1Yh7BKnOv3SyU/mMHKm7BRw6
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_WIQAP4zTOFX2L62XQuQB9QqHEi2m/VbKYs28OXu
       - name: Run a one-line script
-        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_GCGS1eW294smuRe1Yh7BKnOv3SyU/mMHKm7BRw6  
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_WIQAP4zTOFX2L62XQuQB9QqHEi2m/VbKYs28OXu  
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_4Ru0m91tB6ofsxjW2QwOtOWkPwoO/LCtWslrvDL
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_4Ru0m91tB6ofsxjW2QwOtOWkPwoO/LCtWslrvDL
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_wOgBzcL4a69GWOxI504LDVMR1kAE/j2yIH4nQKi
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_wOgBzcL4a69GWOxI504LDVMR1kAE/j2yIH4nQKi
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_WIQAP4zTOFX2L62XQuQB9QqHEi2m/VbKYs28OXu
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_WIQAP4zTOFX2L62XQuQB9QqHEi2m/VbKYs28OXu
+        
