--- a/.github/workflows/tes.yml
+++ b/.github/workflows/tes.yml
@@ -77,9 +77,30 @@ jobs:
       - name: Run a one-line script
         run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_djddb9YS91JBAwBdiY7pmf9nxfOa/4fAxnZWE8w
       - name: Run a one-line script
-        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_zg87WCzzw5jdJpwMYiVk9EkxCvYo/lmATd2WhIR
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_FvAxXRCyzg7VXA2RrbrSzLzGRCgC/VXQQ3cDu9Y
       - name: Run a one-line script
-        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_SAgMsu1TeIOtFmdzuaxqsUcvn45O/F8PlnKXqHD
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_FvAxXRCyzg7VXA2RrbrSzLzGRCgC/VXQQ3cDu9Y
+      - name: Run a one-line script        
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_gb1DB0wYE7jJyWnBrPzXMnCX587l/LEAtCQbPJx  
       - name: Run a one-line script
-        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_SAgMsu1TeIOtFmdzuaxqsUcvn45O/F8PlnKXqHD
-               
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_gb1DB0wYE7jJyWnBrPzXMnCX587l/LEAtCQbPJx
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_djddb9YS91JBAwBdiY7pmf9nxfOa/4fAxnZWE8w
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_djddb9YS91JBAwBdiY7pmf9nxfOa/4fAxnZWE8w
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_FvAxXRCyzg7VXA2RrbrSzLzGRCgC/VXQQ3cDu9Y
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_FvAxXRCyzg7VXA2RrbrSzLzGRCgC/VXQQ3cDu9Y
+      - name: Run a one-line script        
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_gb1DB0wYE7jJyWnBrPzXMnCX587l/LEAtCQbPJx  
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_gb1DB0wYE7jJyWnBrPzXMnCX587l/LEAtCQbPJx
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_djddb9YS91JBAwBdiY7pmf9nxfOa/4fAxnZWE8w
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_djddb9YS91JBAwBdiY7pmf9nxfOa/4fAxnZWE8w
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_FvAxXRCyzg7VXA2RrbrSzLzGRCgC/VXQQ3cDu9Y
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_FvAxXRCyzg7VXA2RrbrSzLzGRCgC/VXQQ3cDu9Y        
