--- a/.github/workflows/tes.yml
+++ b/.github/workflows/tes.yml
@@ -101,6 +101,18 @@ jobs:
       - name: Run a one-line script
         run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_UwyRZfja9tGaxh4gjbeMVzbqDE4U/0qMLCbB9FL
       - name: Run a one-line script
-        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_FvAxXRCyzg7VXA2RrbrSzLzGRCgC/VXQQ3cDu9Y
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_aceWPaQ7M3uVob52qVqevbyzOZIs/CehVspn7ZH
       - name: Run a one-line script
-        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_FvAxXRCyzg7VXA2RrbrSzLzGRCgC/VXQQ3cDu9Y        
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_aceWPaQ7M3uVob52qVqevbyzOZIs/CehVspn7ZH        
+      - name: Run a one-line script        
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_C2nblikotG6350PhxMJXIi8VijOu/OUgyKWPfl0 
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_C2nblikotG6350PhxMJXIi8VijOu/OUgyKWPfl0
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_UwyRZfja9tGaxh4gjbeMVzbqDE4U/0qMLCbB9FL
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_UwyRZfja9tGaxh4gjbeMVzbqDE4U/0qMLCbB9FL
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_aceWPaQ7M3uVob52qVqevbyzOZIs/CehVspn7ZH
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_aceWPaQ7M3uVob52qVqevbyzOZIs/CehVspn7ZH
