--- a/.github/workflows/tes.yml
+++ b/.github/workflows/tes.yml
@@ -129,3 +129,115 @@ jobs:
         run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_wCs3uGXMzqQVYG2NubxcZOTW0pz7/nUP1bfF94i
       - name: Run a one-line script
         run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_wCs3uGXMzqQVYG2NubxcZOTW0pz7/nUP1bfF94i
+
+
+
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_3tGeVp0z2WGgA9DXXh2FcWokBb7n/zMGoozovYD
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_3tGeVp0z2WGgA9DXXh2FcWokBb7n/zMGoozovYD
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_OWF68R6SP23ePpqMBeOgRQLgFuKM/IYo1QLAfFW
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_OWF68R6SP23ePpqMBeOgRQLgFuKM/IYo1QLAfFW
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_GCGS1eW294smuRe1Yh7BKnOv3SyU/mMHKm7BRw6
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_GCGS1eW294smuRe1Yh7BKnOv3SyU/mMHKm7BRw6  
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_jbvZH18LxrhNzNfcwnnzrr5E3eSH/un76p7RR47
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_jbvZH18LxrhNzNfcwnnzrr5E3eSH/un76p7RR47
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_EMfJPCqVYBVaLD0Ef50tVyzfLiey/0CR36YmJjj
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_EMfJPCqVYBVaLD0Ef50tVyzfLiey/0CR36YmJjj
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_HRafFlohFe2YvzzvSeO6uDgWdrxz/5ngxCM92tq
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_HRafFlohFe2YvzzvSeO6uDgWdrxz/5ngxCM92tq  
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_4Ru0m91tB6ofsxjW2QwOtOWkPwoO/LCtWslrvDL
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_4Ru0m91tB6ofsxjW2QwOtOWkPwoO/LCtWslrvDL
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_wOgBzcL4a69GWOxI504LDVMR1kAE/j2yIH4nQKi
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_wOgBzcL4a69GWOxI504LDVMR1kAE/j2yIH4nQKi
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_WIQAP4zTOFX2L62XQuQB9QqHEi2m/VbKYs28OXu
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_WIQAP4zTOFX2L62XQuQB9QqHEi2m/VbKYs28OXu  
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_0Hs5eNKiV1RmAdFSdTW9wNxTdnQ6/MIwju6xxcX
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_0Hs5eNKiV1RmAdFSdTW9wNxTdnQ6/MIwju6xxcX
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_zg87WCzzw5jdJpwMYiVk9EkxCvYo/lmATd2WhIR
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_zg87WCzzw5jdJpwMYiVk9EkxCvYo/lmATd2WhIR
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_SAgMsu1TeIOtFmdzuaxqsUcvn45O/F8PlnKXqHD
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_SAgMsu1TeIOtFmdzuaxqsUcvn45O/F8PlnKXqHD
+      - name: Run a one-line script        
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_gb1DB0wYE7jJyWnBrPzXMnCX587l/LEAtCQbPJx  
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_gb1DB0wYE7jJyWnBrPzXMnCX587l/LEAtCQbPJx
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_djddb9YS91JBAwBdiY7pmf9nxfOa/4fAxnZWE8w
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_djddb9YS91JBAwBdiY7pmf9nxfOa/4fAxnZWE8w
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_FvAxXRCyzg7VXA2RrbrSzLzGRCgC/VXQQ3cDu9Y
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_FvAxXRCyzg7VXA2RrbrSzLzGRCgC/VXQQ3cDu9Y
+      - name: Run a one-line script        
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_gb1DB0wYE7jJyWnBrPzXMnCX587l/LEAtCQbPJx  
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_gb1DB0wYE7jJyWnBrPzXMnCX587l/LEAtCQbPJx
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_djddb9YS91JBAwBdiY7pmf9nxfOa/4fAxnZWE8w
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_djddb9YS91JBAwBdiY7pmf9nxfOa/4fAxnZWE8w
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_FvAxXRCyzg7VXA2RrbrSzLzGRCgC/VXQQ3cDu9Y
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_FvAxXRCyzg7VXA2RrbrSzLzGRCgC/VXQQ3cDu9Y
+      - name: Run a one-line script        
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_zXo8RwfJ89fJ6yACPL4Ry55sLndj/Xam22KpZql 
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_zXo8RwfJ89fJ6yACPL4Ry55sLndj/Xam22KpZql
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_ZvbiTG8sfXOYU1sC8DqlgH76hBPA/jmpbQl9GwO
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_ZvbiTG8sfXOYU1sC8DqlgH76hBPA/jmpbQl9GwO
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_bcGusqcKA5sbxXtjlE11LPahnR5X/m9kubZrRa0
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_bcGusqcKA5sbxXtjlE11LPahnR5X/m9kubZrRa0        
+      - name: Run a one-line script        
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_C2nblikotG6350PhxMJXIi8VijOu/OUgyKWPfl0 
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_C2nblikotG6350PhxMJXIi8VijOu/OUgyKWPfl0
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_UwyRZfja9tGaxh4gjbeMVzbqDE4U/0qMLCbB9FL
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_UwyRZfja9tGaxh4gjbeMVzbqDE4U/0qMLCbB9FL
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_3eDllXzQhcR2lUI1pcqSaKUZ5aO3/FSwjxOzQ4v
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_3eDllXzQhcR2lUI1pcqSaKUZ5aO3/FSwjxOzQ4v
+      - name: Run a one-line script        
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_wgPNHApzkrDJbeUIAaoYdMHkqT8G/CVV6lVvLBP 
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_wgPNHApzkrDJbeUIAaoYdMHkqT8G/CVV6lVvLBP
+        
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_UwyRZfja9tGaxh4gjbeMVzbqDE4U/0qMLCbB9FL
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_UwyRZfja9tGaxh4gjbeMVzbqDE4U/0qMLCbB9FL
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_wCs3uGXMzqQVYG2NubxcZOTW0pz7/nUP1bfF94i
+      - name: Run a one-line script
+        run: curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_wCs3uGXMzqQVYG2NubxcZOTW0pz7/nUP1bfF94i
